--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
@@ -11,12 +10,14 @@
   "author": "shubham singh",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "cor": "^0.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
   }
 }
