--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "shubham singh",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "cor": "^0.0.0",
@@ -18,6 +19,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "validator": "^13.12.0"
   }
 }
