adding jwt authentication and creating all the routes required

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=4200
 CLOUDINARY_CLOUD_NAME=dejtoeayt
 CLOUDINARY_API_SECRET=nEHV_zQrNHck5l0AZ4GRK_I3oDM
 CLOUDINARY_API_KEY=597839438245363
+JWT_SECRET_KEY=knmshjdsfhjhsssfjkfssf
