--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ CLOUDINARY_CLOUD_NAME=dejtoeayt
 CLOUDINARY_API_SECRET=nEHV_zQrNHck5l0AZ4GRK_I3oDM
 CLOUDINARY_API_KEY=597839438245363
 JWT_SECRET_KEY=knmshjdsfhjhsssfjkfssf
+FRONTEND_URL= http://localhost:5173
+DASHBOARD_URL= http://localhost:5174
